# dinov3-hot-ablation

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
conf/: train.yaml
conf/experiments/: v5_hpo_best.yaml  v5s.yaml
scripts/: eval_banepa.py  eval_fair_sample.py  eval_hf_test.py
src/dinov3_hot/: __init__.py  cli.py  config.py  data.py  dataset.py  eval_fair.py  evaluation.py  export.py  finetune.py  hpo.py  infer.py  metrics.py  model.py  paths.py  postprocess.py  serve.py  train.py  tune.py
tests/: test_config.py  test_data.py  test_dataset.py  test_infer.py  test_metrics.py  test_paths.py  test_polygon_metrics.py  test_postprocess.py  test_serve.py  test_tune.py
